--- a/DataMajor/First_Swipe/00006.mongo.nosql.Q.md
+++ b/DataMajor/First_Swipe/00006.mongo.nosql.Q.md
@@ -9,3 +9,206 @@ Same rules — answer like you're in the room. Model answer and diagrams after e
 
 **"Can you explain what NoSQL is, why it was created, and how MongoDB specifically differs from a traditional relational database like PostgreSQL or Oracle?"**
 
+# Feedback First
+
+---
+
+## What You Nailed ✅
+
+**"Big companies got flooded with huge, messy, fast-changing data"** — perfect origin story. Concise and accurate.
+
+**Three scaling problems identified** — rigid schemas, slow scaling, expensive at scale. All correct.
+
+**Document vs row distinction** — cleanly explained. "Each one can have different fields" captures the core flexibility perfectly.
+
+**Schema flexibility tradeoff** — correctly identified that relational requires upfront planning while MongoDB allows change. Shows maturity.
+
+**"Many places use both"** — this is the senior engineer answer. Knowing that the real world uses polyglot persistence rather than picking one winner signals production experience.
+
+**Best use cases** — correctly mapped relational to transactions and accuracy, MongoDB to speed and flexibility.
+
+---
+
+## What to Tighten Up 🔧
+
+**Missing the three V's of big data context** — giving the origin story more technical framing elevates it:
+
+*"The NoSQL movement emerged around 2009-2010 driven by the three V's — Volume, Velocity, and Variety. Volume because datasets grew from gigabytes to petabytes. Velocity because data needed to be written and read in milliseconds not seconds. Variety because data stopped fitting neatly into rows and columns."*
+
+**Missing BSON** — MongoDB specifically uses BSON not plain JSON. One sentence matters:
+
+*"MongoDB stores data as BSON — Binary JSON — which extends JSON with additional data types like dates, integers, and binary data, and is optimized for fast serialization and deserialization."*
+
+**Missing the join problem specifically** — this is the core technical reason NoSQL was needed:
+
+*"The fundamental problem with relational databases at scale was joins. A query joining five tables with billions of rows each requires the database to correlate records across massive datasets — it becomes catastrophically slow. MongoDB solves this by embedding related data inside a single document, eliminating the join entirely."*
+
+**Missing horizontal vs vertical scaling distinction** — your answer said "harder to add servers" but the technical framing is more precise:
+
+*"Relational databases scale vertically — you buy a bigger, more expensive single server. MongoDB scales horizontally through sharding — you add more commodity servers and MongoDB distributes data across them automatically. At Capital One scale, horizontal scaling is the only economically viable option."*
+
+---
+
+# Model Answer
+
+---
+
+*"NoSQL stands for Not Only SQL — it's a family of database technologies that emerged around 2009 to 2010 to solve problems that relational databases couldn't handle at internet scale.*
+
+**Why NoSQL was created:**
+
+*The trigger was the three V's of big data — Volume, Velocity, and Variety. Volume because companies like Google, Amazon, and Facebook were dealing with petabytes of data, far beyond what a single relational database server could hold. Velocity because modern applications need reads and writes in milliseconds — a relational database doing complex joins across billion-row tables simply cannot deliver that. Variety because data stopped fitting neatly into rows and columns — user profiles, social posts, product catalogs, IoT sensor readings all have irregular, nested, variable structures that a fixed schema handles poorly.*
+
+*Relational databases had three specific architectural limitations at this scale. First, rigid schemas — changing a table structure on a billion-row table requires a migration that can lock the table for hours. Second, vertical scaling — relational databases scale by buying bigger, more expensive single servers, which has a hard physical and economic ceiling. Third, the join problem — reconstructing a customer profile from five normalized tables with billions of rows each requires correlating massive datasets, which becomes catastrophically slow.*
+
+*NoSQL solved all three — flexible schemas that change without migrations, horizontal scaling by adding commodity servers, and embedding related data together to eliminate joins.*
+
+**How MongoDB specifically differs from PostgreSQL or Oracle:**
+
+*MongoDB is a document database. Instead of storing data in rows and columns it stores self-contained documents in BSON format — Binary JSON — which extends standard JSON with additional data types optimized for fast serialization.*
+
+*The fundamental difference is the data model. In PostgreSQL a customer record is spread across multiple normalized tables — a customers table, an addresses table, an accounts table, a transactions table — and you reconstruct the full customer picture with a multi-table join. In MongoDB that same customer is a single document containing all their information nested together. One read operation retrieves everything. No joins.*
+
+*Schema is the second major difference. PostgreSQL requires you to define every column upfront. Adding a new field means an ALTER TABLE statement that can be expensive at scale. MongoDB has no enforced schema by default — you can add new fields to documents at any time without touching existing documents. Capital One would add schema validation rules on top to maintain data quality while keeping the flexibility.*
+
+*Scaling is the third difference. PostgreSQL scales vertically — you buy a bigger server. MongoDB scales horizontally through sharding — you add more servers and MongoDB automatically distributes your data across them using a shard key. When Capital One's customer database grows from 50 million to 100 million customers, you add shards rather than buying a more expensive machine.*
+
+*The honest answer for a bank like Capital One is that both have a role. Core financial transactions — debits, credits, transfers — live in relational databases because ACID compliance and complex reporting are non-negotiable there. Customer profiles, fraud case management, enrichment stores for ML models — those live in MongoDB because the data is naturally document-shaped and flexibility and read speed matter more than relational integrity."*
+
+---
+
+# Diagrams
+
+```
+WHY NOSQL WAS CREATED — THE THREE V'S
+╔═══════════════════════════════════════════════════════════════════════╗
+║                                                                       ║
+║   VOLUME              VELOCITY             VARIETY                   ║
+║   ──────              ────────             ───────                   ║
+║   Gigabytes           Seconds              Rows & Columns            ║
+║      │                   │                     │                     ║
+║      │ grew to           │ needed to be        │ became              ║
+║      ▼                   ▼                     ▼                     ║
+║   Petabytes           Milliseconds         Nested JSON               ║
+║                                            Arrays                    ║
+║                                            Variable fields           ║
+║                                            Unstructured text         ║
+║                                                                       ║
+║   Relational databases could not handle all three simultaneously     ║
+║   NoSQL was built specifically for this combination                  ║
+║                                                                       ║
+╚═══════════════════════════════════════════════════════════════════════╝
+
+
+RELATIONAL VS MONGODB — DATA MODEL
+╔═══════════════════════════════════════════════════════════════════════╗
+║                                                                       ║
+║  RELATIONAL (PostgreSQL)          MONGODB                            ║
+║  ───────────────────────          ───────                            ║
+║                                                                       ║
+║  customers table:                 customers collection:              ║
+║  ┌────┬───────┬───────┐           {                                  ║
+║  │ id │ name  │ email │             "_id": "C001",                   ║
+║  ├────┼───────┼───────┤             "name": "Alice Johnson",         ║
+║  │C001│ Alice │a@e.com│             "email": "a@e.com",              ║
+║  └────┴───────┴───────┘             "address": {                     ║
+║                                       "city": "McLean",              ║
+║  addresses table:                     "state": "VA"                  ║
+║  ┌────┬────────┬───────┐            },                               ║
+║  │ id │  city  │ state │            "accounts": [                    ║
+║  ├────┼────────┼───────┤              {"type": "checking",           ║
+║  │C001│ McLean │  VA   │               "balance": 5420.00},          ║
+║  └────┴────────┴───────┘              {"type": "savings",            ║
+║                                        "balance": 28750.00}          ║
+║  accounts table:                    ],                               ║
+║  ┌────┬──────────┬─────────┐         "risk_score": 0.12,             ║
+║  │ id │   type   │ balance │         "is_premium": true              ║
+║  ├────┼──────────┼─────────┤       }                                 ║
+║  │C001│ checking │ 5420.00 │                                         ║
+║  │C001│ savings  │28750.00 │       ONE document                      ║
+║  └────┴──────────┴─────────┘       ONE read                          ║
+║                                    NO joins                          ║
+║  THREE tables                                                        ║
+║  ONE join query                                                      ║
+║  Gets slower as tables grow                                          ║
+║                                                                       ║
+╚═══════════════════════════════════════════════════════════════════════╝
+
+
+SCALING — VERTICAL VS HORIZONTAL
+╔═══════════════════════════════════════════════════════════════════════╗
+║                                                                       ║
+║  RELATIONAL — VERTICAL SCALING         MONGODB — HORIZONTAL SCALING  ║
+║  ─────────────────────────────         ────────────────────────────  ║
+║                                                                       ║
+║        ┌─────────┐                    ┌───────┐┌───────┐┌───────┐   ║
+║        │ BIGGEST │                    │Shard 1││Shard 2││Shard 3│   ║
+║        │ SERVER  │                    │C001-  ││C334K- ││C667K- │   ║
+║        │ MONEY   │                    │C333K  ││C666K  ││C999K  │   ║
+║        │ CAN BUY │                    └───────┘└───────┘└───────┘   ║
+║        └─────────┘                         ▲        ▲        ▲      ║
+║             ▲                              └────────┴────────┘      ║
+║             │                                       │               ║
+║        Hit ceiling                          mongos router           ║
+║        Buy even bigger                      directs queries         ║
+║        server 💸                            to right shard          ║
+║                                                                      ║
+║        Hard physical limit                 Add shards = add scale   ║
+║        Expensive                           Commodity servers        ║
+║        Single point of failure             Fault tolerant           ║
+║                                                                      ║
+╚═══════════════════════════════════════════════════════════════════════╝
+
+
+TERM MAPPING — RELATIONAL TO MONGODB
+╔═══════════════════════════════════════════════════════════════════════╗
+║                                                                       ║
+║   RELATIONAL          MONGODB              NOTES                     ║
+║   ──────────          ───────              ─────                     ║
+║   Database      ══►   Database             Same concept              ║
+║   Table         ══►   Collection           No fixed schema           ║
+║   Row           ══►   Document             JSON/BSON format          ║
+║   Column        ══►   Field                Varies per document       ║
+║   Primary Key   ══►   _id                  Auto-generated if needed  ║
+║   Foreign Key   ══►   Reference/Embed      Design choice             ║
+║   JOIN          ══►   $lookup / Embed      Embed = no join needed    ║
+║   INDEX         ══►   Index                Same concept              ║
+║   VIEW          ══►   View                 Same concept              ║
+║   SQL           ══►   MQL                  MongoDB Query Language    ║
+║   ACID Txn      ══►   Multi-doc Txn        Added in MongoDB 4.0      ║
+║                                                                       ║
+╚═══════════════════════════════════════════════════════════════════════╝
+
+
+WHEN TO USE WHICH AT CAPITAL ONE
+╔═══════════════════════════════════════════════════════════════════════╗
+║                                                                       ║
+║   USE RELATIONAL (PostgreSQL/Oracle) WHEN:                           ║
+║   ─────────────────────────────────                                  ║
+║   ✅ Core financial transactions — debits, credits, transfers        ║
+║   ✅ Regulatory reporting requiring complex joins                    ║
+║   ✅ ACID compliance across multiple entities is non-negotiable      ║
+║   ✅ Data is highly structured and consistent                        ║
+║                                                                       ║
+║   USE MONGODB WHEN:                                                   ║
+║   ─────────────────                                                  ║
+║   ✅ Customer 360 profiles — nested, variable attributes             ║
+║   ✅ Fraud case management — each case has different evidence        ║
+║   ✅ ML feature store — hundreds of behavioral features per customer ║
+║   ✅ Transaction enrichment — fast lookup during real-time pipeline  ║
+║   ✅ Product catalogs — different fields per product type            ║
+║                                                                       ║
+║   CAPITAL ONE LIKELY USES BOTH — polyglot persistence                ║
+║   Right database for the right job                                   ║
+║                                                                       ║
+╚═══════════════════════════════════════════════════════════════════════╝
+```
+
+---
+---
+---
+
+## Question 2 — Stepping Up
+
+**"Walk me through MongoDB's architecture — replica sets, sharding, and the WiredTiger storage engine. How do these components work together to give you both high availability and horizontal scale?"**
+
