--- a/DataMajor/First_Swipe/00006.mongo.nosql.Q.md
+++ b/DataMajor/First_Swipe/00006.mongo.nosql.Q.md
@@ -212,3 +212,263 @@ WHEN TO USE WHICH AT CAPITAL ONE
 
 **"Walk me through MongoDB's architecture — replica sets, sharding, and the WiredTiger storage engine. How do these components work together to give you both high availability and horizontal scale?"**
 
+# Feedback First
+
+---
+
+## What You Nailed ✅
+
+**Replica set primary/secondary model** — correctly explained. One primary handles writes, secondaries replicate, automatic election on failure. Accurate and complete.
+
+**"Automatic election"** — mentioning this specifically shows you understand that MongoDB's high availability is self-healing, not manual.
+
+**Sharding components** — correctly identified all three pieces — shards, config servers, and mongos routers. Most candidates miss the config server entirely.
+
+**"Each shard holds part of the data"** — correct. And giving an example like user ID or region shows you understand the shard key concept.
+
+**WiredTiger as the storage layer** — correctly positioned it as the underlying engine and correctly identified compression, caching, and crash recovery.
+
+**"Each shard is itself a replica set"** — your closing summary implied this correctly. This is the key insight that combines both concepts.
+
+**The file cabinet analogy** — simple and memorable for WiredTiger.
+
+---
+
+## What to Tighten Up 🔧
+
+**Missing the shard key design importance.** This is the most critical MongoDB architecture decision and deserves more attention:
+
+*"The shard key is the most important design decision in a sharded MongoDB deployment. A bad shard key — one with low cardinality or that causes hotspots — can make sharding worse than not sharding at all. For Capital One's customer collection, customer_id is a good shard key because it has high cardinality, distributes writes evenly, and queries are almost always scoped to a single customer."*
+
+**Missing ranged vs hashed sharding.** Two sentences would complete the picture:
+
+*"MongoDB supports two sharding strategies. Range-based sharding groups similar shard key values together — good for range queries but can cause hotspots if values are sequential. Hashed sharding distributes documents by hashing the shard key — guarantees even distribution but makes range queries less efficient."*
+
+**Missing the odd-number rule for replica sets.** Critical detail:
+
+*"Replica sets always run an odd number of members — typically three or five — because elections require a majority vote to elect a new primary. With two members, if one goes down you can't reach majority and the set becomes read-only. Three members means one failure still leaves two members to reach majority and elect a new primary."*
+
+**Missing WiredTiger document-level locking.** This is its key performance feature:
+
+*"WiredTiger's most important performance characteristic is document-level concurrency control — multiple operations on different documents can run simultaneously without blocking each other. The older MMAPv1 engine used collection-level locking, meaning one write blocked all other writes to the entire collection. WiredTiger eliminated that bottleneck."*
+
+---
+
+# Model Answer
+
+---
+
+*"MongoDB's architecture has three layers that work together to deliver both high availability and horizontal scale — replica sets for reliability, sharding for scale, and WiredTiger for storage efficiency.*
+
+**Replica Sets:**
+
+*A replica set is a group of MongoDB instances — always an odd number, typically three — that all hold identical copies of the same data. The odd number is deliberate — elections require a majority vote to choose a new primary, and an even number could result in a tie.*
+
+*One member is the Primary — it receives all write operations and propagates changes to the other members through an operation log called the oplog. The other members are Secondaries — they continuously replicate from the Primary's oplog and stay current within milliseconds.*
+
+*If the Primary goes down — hardware failure, network partition, planned maintenance — the Secondaries detect the absence of heartbeats and automatically hold an election. Within typically 10 to 30 seconds a new Primary is elected and the cluster resumes accepting writes. No human intervention required. This is MongoDB's high availability story.*
+
+*Secondaries can also serve read operations, which is useful for distributing read-heavy workloads. Capital One might route fraud model feature lookups to secondaries to avoid adding read pressure to the Primary that's handling all transaction writes.*
+
+**Sharding:**
+
+*Sharding is MongoDB's horizontal scaling mechanism. When a single replica set can no longer handle your data volume or write throughput, you shard — splitting the data across multiple replica sets called shards.*
+
+*The architecture has three components. The shards themselves — each one is a full replica set holding a subset of the total data. The config servers — a small replica set that stores metadata about which shard holds which data ranges. And the mongos routers — lightweight processes that sit in front of everything and direct incoming queries to the correct shard based on the shard key.*
+
+*The shard key is the most critical design decision in a MongoDB deployment. It determines how data is distributed across shards. A good shard key has high cardinality — many distinct values — and distributes writes evenly to avoid hotspots. For Capital One's customer collection, customer_id is an ideal shard key. For a transactions collection, a compound key of customer_id plus date distributes data evenly while supporting the most common query patterns.*
+
+*MongoDB supports two sharding strategies. Range-based sharding groups documents with similar shard key values on the same shard — good for range queries like "all transactions between date A and date B" but risks hotspots if values are sequential or clustered. Hashed sharding applies a hash function to the shard key and distributes documents based on the hash — guarantees even distribution but sacrifices range query efficiency.*
+
+**WiredTiger Storage Engine:**
+
+*WiredTiger is the storage engine that runs underneath everything — it handles how data is physically written to and read from disk on each node.*
+
+*Its most important performance characteristic is document-level concurrency control. Multiple write operations on different documents execute simultaneously without blocking each other. The older MMAPv1 engine used collection-level locking — one write blocked all other writes to the entire collection. At Capital One's transaction volume that would be catastrophic. WiredTiger eliminated that bottleneck entirely.*
+
+*WiredTiger also applies compression by default — Snappy compression for data files and Zlib for the journal. This typically reduces storage footprint by 60 to 80 percent compared to uncompressed storage, which at Capital One scale translates to significant infrastructure cost savings.*
+
+*Finally WiredTiger uses checkpointing — writing a consistent snapshot of all data to disk every 60 seconds by default. Combined with a write-ahead journal that logs every operation, WiredTiger can recover to a consistent state after a crash with minimal data loss.*
+
+**How They Work Together:**
+
+*Each shard is itself a full replica set — so you get both horizontal scale and high availability simultaneously. A three-shard cluster with three-member replica sets means nine MongoDB instances total, any one of which can fail without impact. WiredTiger running on every node ensures each instance is reading and writing efficiently with compression and document-level concurrency.*
+
+*For Capital One — a customer_profiles collection sharded by customer_id across three shards, each shard a three-member replica set, WiredTiger compressed and checkpointed — gives you a system that handles hundreds of millions of customer documents, survives any individual server failure, and scales by simply adding shards as the customer base grows."*
+
+---
+
+# Architecture Diagrams
+
+```
+REPLICA SET — HIGH AVAILABILITY
+╔═══════════════════════════════════════════════════════════════════════╗
+║                                                                       ║
+║                    REPLICA SET (3 members)                           ║
+║                                                                       ║
+║         ┌─────────────────────────────────────────┐                  ║
+║         │                                         │                  ║
+║         ▼                                         ▼                  ║
+║  ┌─────────────┐    oplog    ┌─────────────┐      │                  ║
+║  │  PRIMARY    │────────────►│ SECONDARY 1 │      │                  ║
+║  │             │             │             │      │                  ║
+║  │ All writes  │    oplog    ├─────────────┤      │                  ║
+║  │ All reads   │────────────►│ SECONDARY 2 │      │                  ║
+║  │ (default)   │             │             │      │                  ║
+║  └──────┬──────┘             └──────┬──────┘      │                  ║
+║         │                          │              │                  ║
+║         │ heartbeat every 2s       │ heartbeat    │                  ║
+║         └──────────────────────────┘              │                  ║
+║                                                   │                  ║
+║  PRIMARY GOES DOWN:                               │                  ║
+║  ─────────────────                                │                  ║
+║  Secondaries detect missing heartbeat             │                  ║
+║         │                                         │                  ║
+║         ▼                                         │                  ║
+║  Election triggered — majority vote needed        │                  ║
+║  2 remaining members = majority of 3 ✅           │                  ║
+║         │                                         │                  ║
+║         ▼                                         │                  ║
+║  Secondary 1 elected new PRIMARY                  │                  ║
+║  Recovery: 10-30 seconds                          │                  ║
+║  Zero data loss (oplog replicated) ✅             │                  ║
+║                                                   │                  ║
+║  WHY ODD NUMBERS:                                 │                  ║
+║  ────────────────                                 │                  ║
+║  2 members: 1 fails → 1 remaining                 │                  ║
+║             cannot reach majority → READ ONLY ❌  │                  ║
+║  3 members: 1 fails → 2 remaining                 │                  ║
+║             majority reached → NEW PRIMARY ✅     │                  ║
+║  5 members: 2 fail  → 3 remaining                 │                  ║
+║             majority reached → NEW PRIMARY ✅     │                  ║
+║                                                   │                  ║
+╚═══════════════════════════════════════════════════╪══════════════════╝
+                                                    │
+                                                    │
+SHARDING — HORIZONTAL SCALE                        │
+╔═══════════════════════════════════════════════════╪══════════════════╗
+║                                                   │                  ║
+║   APPLICATION                                     │                  ║
+║        │                                          │                  ║
+║        ▼                                          │                  ║
+║  ┌─────────────┐                                  │                  ║
+║  │   mongos    │  ◄── Query router                │                  ║
+║  │   ROUTER    │      Directs to right shard      │                  ║
+║  └──────┬──────┘                                  │                  ║
+║         │                                         │                  ║
+║         │ consults                                │                  ║
+║         ▼                                         │                  ║
+║  ┌─────────────┐                                  │                  ║
+║  │   CONFIG    │  ◄── Stores chunk metadata       │                  ║
+║  │   SERVERS   │      "C001-C333K lives on Shard1"│                  ║
+║  └──────┬──────┘                                  │                  ║
+║         │                                         │                  ║
+║         │ routes to                               │                  ║
+║         ▼                                         │                  ║
+║  ┌──────────────────────────────────────────┐     │                  ║
+║  │              SHARDS                      │     │                  ║
+║  │                                          │     │                  ║
+║  │  ┌──────────┐ ┌──────────┐ ┌──────────┐ │     │                  ║
+║  │  │ SHARD 1  │ │ SHARD 2  │ │ SHARD 3  │ │     │                  ║
+║  │  │(Replica  │ │(Replica  │ │(Replica  │ │     │                  ║
+║  │  │  Set)    │ │  Set)    │ │  Set)    │ │     │                  ║
+║  │  │          │ │          │ │          │ │     │                  ║
+║  │  │ C001 to  │ │ C334K to │ │ C667K to │ │     │                  ║
+║  │  │ C333K    │ │ C666K    │ │ C999K    │ │     │                  ║
+║  │  │          │ │          │ │          │ │     │                  ║
+║  │  │ P+S1+S2  │ │ P+S1+S2  │ │ P+S1+S2  │ │     │                  ║
+║  │  └──────────┘ └──────────┘ └──────────┘ │     │                  ║
+║  │  Each shard = full replica set ✅        │     │                  ║
+║  └──────────────────────────────────────────┘     │                  ║
+║                                                   │                  ║
+╚═══════════════════════════════════════════════════╪══════════════════╝
+                                                    │
+WIREDTIGER — STORAGE ENGINE                        │
+╔═══════════════════════════════════════════════════╪══════════════════╗
+║                                                   │                  ║
+║  EVERY NODE IN EVERY SHARD RUNS WIREDTIGER        │                  ║
+║                                                   │                  ║
+║  ┌────────────────────────────────────────────┐   │                  ║
+║  │              WiredTiger                    │   │                  ║
+║  │                                            │   │                  ║
+║  │  Document-level     Compression            │   │                  ║
+║  │  concurrency   ──►  Snappy: data files     │   │                  ║
+║  │                     Zlib:   journal        │   │                  ║
+║  │  Many writes on     60-80% size reduction  │   │                  ║
+║  │  different docs     at Capital One scale   │   │                  ║
+║  │  simultaneously ✅  = massive cost saving  │   │                  ║
+║  │                                            │   │                  ║
+║  │  Checkpointing ──►  Snapshot every 60s     │   │                  ║
+║  │                     + write-ahead journal  │   │                  ║
+║  │                     = crash recovery ✅    │   │                  ║
+║  │                                            │   │                  ║
+║  │  Cache ──────────►  Frequently accessed    │   │                  ║
+║  │                     docs stay in RAM       │   │                  ║
+║  │                     = fast reads ✅        │   │                  ║
+║  └────────────────────────────────────────────┘   │                  ║
+║                                                   │                  ║
+╚═══════════════════════════════════════════════════╧══════════════════╝
+
+
+SHARD KEY DESIGN — CRITICAL DECISION
+╔═══════════════════════════════════════════════════════════════════════╗
+║                                                                       ║
+║  BAD SHARD KEY              GOOD SHARD KEY                           ║
+║  ────────────               ───────────────                          ║
+║                                                                       ║
+║  created_date               customer_id                              ║
+║  ──────────                 ───────────                              ║
+║  All new writes go to       Writes distributed                       ║
+║  "today" shard              evenly across all shards                 ║
+║                                                                       ║
+║  Shard 1: JAN ██████████   Shard 1: C001-C333K ████                 ║
+║  Shard 2: FEB ████         Shard 2: C334K-C666K ████                ║
+║  Shard 3: TODAY ░░░░░░░░░  Shard 3: C667K-C999K ████                ║
+║                                                                       ║
+║  HOTSPOT ❌                 EVEN DISTRIBUTION ✅                     ║
+║                                                                       ║
+║  RANGE SHARDING             HASHED SHARDING                          ║
+║  ──────────────             ────────────────                         ║
+║  Good for: range queries    Good for: write distribution             ║
+║  Risk: hotspots             Risk: range queries hit all shards       ║
+║                                                                       ║
+╚═══════════════════════════════════════════════════════════════════════╝
+
+
+THE COMPLETE PICTURE — ALL THREE LAYERS
+╔═══════════════════════════════════════════════════════════════════════╗
+║                                                                       ║
+║  APPLICATION REQUEST: "Get customer C001 profile"                    ║
+║         │                                                             ║
+║         ▼                                                             ║
+║  mongos router checks config server                                  ║
+║  "C001 lives on Shard 1" ──────────────────────────────┐            ║
+║                                                         │            ║
+║         ┌───────────────────────────────────────────────┘            ║
+║         ▼                                                             ║
+║  SHARD 1 (Replica Set)                                               ║
+║  ┌─────────────────────────────────────────────────┐                 ║
+║  │  PRIMARY                                        │                 ║
+║  │  WiredTiger checks cache → found in RAM ✅      │                 ║
+║  │  Returns document in < 10ms                     │                 ║
+║  │                                                 │                 ║
+║  │  Meanwhile oplog replicating to:                │                 ║
+║  │  Secondary 1 ✅  Secondary 2 ✅                 │                 ║
+║  └─────────────────────────────────────────────────┘                 ║
+║         │                                                             ║
+║         ▼                                                             ║
+║  Customer document returned to application                           ║
+║  Total time: < 10ms ✅                                               ║
+║  High availability: 2 replicas ready to take over ✅                 ║
+║  Horizontal scale: add Shard 4 when needed ✅                        ║
+║                                                                       ║
+╚═══════════════════════════════════════════════════════════════════════╝
+```
+
+---
+---
+---
+## Question 3 — Getting Serious
+
+**"How would you model a Capital One customer's data in MongoDB? Walk me through your document design decisions — what you embed, what you reference, and why. Then show me how you would query it efficiently."**
+
