--- a/DataMajor/First_Swipe/00008.Cassandra.nosql.Q.md
+++ b/DataMajor/First_Swipe/00008.Cassandra.nosql.Q.md
@@ -7,3 +7,247 @@ Same rules — answer in the room, model answer and diagrams after each response
 ## Question 1 — Warm Up
 
 **"Can you explain what Apache Cassandra is, what problem it was designed to solve, and how its architecture differs fundamentally from both a relational database and MongoDB?"**  
+
+# Feedback First
+
+---
+
+## What You Nailed ✅
+
+**Facebook origin story** — correctly placed and correctly motivated. Write-heavy, billions of messages, no downtime. Perfect framing.
+
+**"No single point of failure"** — leading with this shows you understand Cassandra's core architectural philosophy immediately.
+
+**Masterless architecture** — correctly identified that every node can accept reads and writes. This is the fundamental distinction from both relational and MongoDB.
+
+**Consistent hashing** — mentioning this specifically shows technical depth. Most candidates say "it distributes data" without knowing the mechanism.
+
+**Tunable consistency** — correctly identified and correctly contrasted with MongoDB's default strong consistency. This is a critical Cassandra differentiator.
+
+**Linear scaling** — correctly described. Add nodes, get proportional capacity. No resharding complexity like MongoDB.
+
+**The closing bottom line** — "it must keep accepting writes at crazy speed forever, even if half the servers die" is the single best one-liner description of when to choose Cassandra. Memorable and precise.
+
+**Wide-column distinction** — correctly identified Cassandra as wide-column rather than document store. Shows you know the NoSQL taxonomy.
+
+---
+
+## What to Tighten Up 🔧
+
+**Missing the CAP theorem framing.** You described eventual consistency correctly but didn't use the CAP theorem vocabulary which interviewers specifically listen for:
+
+*"Cassandra is an AP system — it prioritizes Availability and Partition Tolerance over Consistency in the CAP theorem. During a network partition Cassandra continues accepting writes on all available nodes, accepting temporary inconsistency. MongoDB is a CP system — it prioritizes Consistency, refusing writes during a partition rather than risking inconsistency."*
+
+**Missing the ring architecture specifically.** You mentioned consistent hashing but didn't describe the ring which is Cassandra's iconic architectural image:
+
+*"Cassandra organizes nodes in a logical ring. Each node owns a range of the hash space. When data arrives, Cassandra hashes the partition key and routes it to the node responsible for that range. With replication factor 3, the data is also copied to the next two nodes clockwise around the ring — no election needed, no leader, just automatic peer replication."*
+
+**Missing the write path explanation.** This is what makes Cassandra's write speed possible and interviewers love hearing it:
+
+*"Cassandra's extreme write throughput comes from its write path — writes go to an in-memory MemTable and a sequential Commit Log simultaneously. Both are sequential operations — no random disk seeks. When the MemTable fills it flushes to an immutable SSTable on disk. This is fundamentally different from relational databases that do random disk writes for every update."*
+
+**"Wide-column like super-flexible spreadsheets"** — this analogy is slightly off. A cleaner framing:
+
+*"Wide-column means rows can have different columns, and columns are grouped and sorted within a row. Think of it as a map of sorted maps — the outer key is the partition key, the inner sorted structure is the clustering columns. This physical layout is what makes time-series queries — give me all transactions for customer C001 ordered by time — blindingly fast."*
+
+---
+
+# Model Answer
+
+---
+
+*"Apache Cassandra is a distributed wide-column NoSQL database built for one specific purpose — extreme write throughput and continuous availability across a globally distributed cluster with no single point of failure.*
+
+**The Problem it Solved:**
+
+*Facebook built Cassandra in 2008 to power their inbox search feature — storing hundreds of billions of messages across hundreds of millions of users with writes arriving every millisecond from data centers worldwide. The requirement was brutal — writes must never slow down, the system must never go down, and it must scale to any volume by simply adding commodity servers. No database at the time could meet all three requirements simultaneously.*
+
+*Relational databases failed on scale — vertical scaling hits a physical and economic ceiling and horizontal scaling with traditional replication creates write bottlenecks at the primary node. MongoDB was closer but its primary/secondary model still had a write bottleneck — all writes go to the primary. Cassandra eliminated the bottleneck entirely by making every node equal.*
+
+**How Cassandra's Architecture Differs from Relational:**
+
+*Relational databases are built around the ACID transaction model — strict consistency, complex joins, normalized schemas. They scale vertically and struggle to distribute writes across many nodes because maintaining consistency across a distributed system requires coordination — and coordination creates latency and bottlenecks.*
+
+*Cassandra makes a deliberate tradeoff in the CAP theorem. It is an AP system — Availability and Partition Tolerance over Consistency. During a network partition Cassandra continues accepting writes and reads on every available node, accepting that data might be temporarily inconsistent between nodes. A relational database is a CP system — it refuses writes during a partition rather than risk inconsistency. For audit logs and event streams, temporary inconsistency is acceptable. For account balances it isn't — which is why Capital One uses both.*
+
+**How Cassandra's Architecture Differs from MongoDB:**
+
+*MongoDB is a CP document store with a primary/secondary replica set model. Writes go to one primary node per replica set. If that primary goes down, an election happens and a new primary is chosen — typically 10 to 30 seconds of write unavailability. With sharding you have multiple primary nodes but each shard still has one write bottleneck.*
+
+*Cassandra has no primaries anywhere. It is a masterless peer-to-peer system. Every node is equal. Every node can accept any read or write. The data distribution mechanism is consistent hashing — Cassandra hashes the partition key and maps the result to a position on a logical ring. Each node owns a segment of that ring. Data is automatically routed to the correct node based on its hash. With replication factor 3, data is also copied to the next two nodes clockwise on the ring — no election, no leader, just automatic peer replication.*
+
+*This masterless ring architecture is why Cassandra never goes down. There is no single thing to fail. You can take down a third of the nodes in a Cassandra cluster and the system continues operating without interruption, without data loss, and without any manual intervention.*
+
+**Why Cassandra's Writes are So Fast:**
+
+*Cassandra's extreme write throughput — millions of writes per second — comes from its write path architecture. When a write arrives it goes to two places simultaneously — an in-memory structure called a MemTable for fast access, and a sequential Commit Log on disk for durability. Both operations are sequential — no random disk seeks. Sequential writes are an order of magnitude faster than random writes.*
+
+*When the MemTable fills up, Cassandra flushes it to disk as an immutable file called an SSTable — Sorted String Table. SSTables are never modified. Compaction runs periodically in the background, merging SSTables and organizing data. The result is a write path that is almost entirely sequential I/O — the fastest possible way to write to disk.*
+
+**The One-Line Summary:**
+
+*Choose Cassandra when the requirement is — the system must keep accepting writes at extreme speed forever, even if servers fail, even across multiple data centers, with consistent single-digit millisecond latency at any scale. That is Cassandra's singular superpower and the reason Capital One uses it for transaction logging, audit trails, and real-time feature stores."*
+
+---
+
+# Architecture Diagrams
+
+```
+THE CAP THEOREM — WHERE CASSANDRA SITS
+╔═══════════════════════════════════════════════════════════════════════╗
+║                                                                       ║
+║                        CONSISTENCY                                    ║
+║                             △                                        ║
+║                             │                                        ║
+║                             │                                        ║
+║                    CP       │       CA                               ║
+║               (MongoDB)     │   (Traditional                         ║
+║                             │    Relational)                         ║
+║                             │                                        ║
+║   ──────────────────────────┼──────────────────────────              ║
+║                             │                                        ║
+║                    AP       │                                        ║
+║                (Cassandra)  │                                        ║
+║                             │                                        ║
+║   AVAILABILITY ─────────────┼─────────────── PARTITION              ║
+║                             │               TOLERANCE                ║
+║                                                                       ║
+║   All distributed systems MUST have Partition Tolerance              ║
+║   Real choice is Consistency vs Availability                         ║
+║                                                                       ║
+║   MongoDB:    CP — refuses writes during partition                   ║
+║               never risks inconsistency                              ║
+║                                                                       ║
+║   Cassandra:  AP — keeps accepting writes during partition           ║
+║               accepts temporary inconsistency                        ║
+║                                                                       ║
+║   Use MongoDB for:    Account balances (must be accurate)            ║
+║   Use Cassandra for:  Audit logs (must never stop writing)           ║
+║                                                                       ║
+╚═══════════════════════════════════════════════════════════════════════╝
+
+
+CASSANDRA RING ARCHITECTURE
+╔═══════════════════════════════════════════════════════════════════════╗
+║                                                                       ║
+║                         NODE 1                                       ║
+║                      (hash 0-20)                                     ║
+║                    ┌───────────┐                                     ║
+║                   /             \                                    ║
+║    NODE 6        /               \        NODE 2                    ║
+║  (hash 80-99)   /                 \     (hash 20-40)                ║
+║  ┌──────────┐  /                   \  ┌──────────┐                  ║
+║  │          │ /     CASSANDRA       \ │          │                  ║
+║  │  Every   │       RING             │  Every   │                  ║
+║  │  node    │\                      /│  node    │                  ║
+║  │  equal   │ \                    / │  equal   │                  ║
+║  └──────────┘  \                  /  └──────────┘                  ║
+║    NODE 5       \                /       NODE 3                    ║
+║  (hash 60-80)    \              /      (hash 40-60)                ║
+║                   \            /                                    ║
+║                    └──────────┘                                     ║
+║                       NODE 4                                        ║
+║                    (hash 60-80)                                     ║
+║                                                                       ║
+║  Write arrives: customer_id = "C001"                                 ║
+║  Hash("C001") = 34  →  routed to NODE 2                             ║
+║  Replication factor 3 → also copied to NODE 3 and NODE 4            ║
+║                                                                       ║
+║  NODE 2 goes down:                                                   ║
+║  ─────────────────                                                   ║
+║  No election needed ✅                                               ║
+║  NODE 3 and NODE 4 already have copies ✅                            ║
+║  Reads/writes continue immediately ✅                                ║
+║  Zero downtime ✅                                                    ║
+║                                                                       ║
+╚═══════════════════════════════════════════════════════════════════════╝
+
+
+CASSANDRA VS MONGODB VS RELATIONAL
+╔═══════════════════════════════════════════════════════════════════════╗
+║                                                                       ║
+║                  RELATIONAL      MONGODB        CASSANDRA            ║
+║                  ─────────       ───────        ─────────            ║
+║  Architecture    Single          Primary/       Masterless           ║
+║                  primary or      Secondary      peer ring            ║
+║                  complex         replica set                         ║
+║                  replication                                         ║
+║                                                                       ║
+║  Write path      Random          Journaled      Sequential           ║
+║                  disk I/O        B-tree         MemTable +           ║
+║                                  updates        SSTable              ║
+║                                                                       ║
+║  Write speed     Moderate        Very fast      Extreme              ║
+║                                                 (millions/sec)       ║
+║                                                                       ║
+║  Consistency     Strong          Strong         Tunable              ║
+║  model           (ACID)          (CP)           (AP default)         ║
+║                                                                       ║
+║  Failure         Primary         Election       Instant —            ║
+║  handling        failover        10-30 sec      no downtime          ║
+║                  required        delay          ever                 ║
+║                                                                       ║
+║  Query           SQL — any       MQL — any      CQL — partition      ║
+║  flexibility     field           field          key required         ║
+║                                                                       ║
+║  Best for        Complex         Rich docs      Time-series          ║
+║                  queries         varied         write-heavy          ║
+║                  ACID txns       schemas        event logs           ║
+║                                                                       ║
+║  Capital One     Core account    Customer       Transaction          ║
+║  use case        ledger          profiles       audit log            ║
+║                  regulatory      fraud cases    feature store        ║
+║                  reporting       enrichment     event history        ║
+║                                                                       ║
+╚═══════════════════════════════════════════════════════════════════════╝
+
+
+CASSANDRA WRITE PATH — WHY IT'S SO FAST
+╔═══════════════════════════════════════════════════════════════════════╗
+║                                                                       ║
+║  WRITE ARRIVES                                                        ║
+║       │                                                               ║
+║       ├─────────────────────────────────────────┐                    ║
+║       ▼                                         ▼                    ║
+║  ┌─────────────┐                        ┌───────────────┐            ║
+║  │  MemTable   │                        │  Commit Log   │            ║
+║  │  (In RAM)   │                        │  (Disk —      │            ║
+║  │             │                        │   sequential) │            ║
+║  │  Super fast │                        │               │            ║
+║  │  write ✅   │                        │  Durability ✅ │            ║
+║  └──────┬──────┘                        └───────────────┘            ║
+║         │                                                             ║
+║         │ MemTable full                                               ║
+║         ▼                                                             ║
+║  ┌─────────────┐                                                      ║
+║  │  SSTable    │  ◄── Immutable, sorted, compressed                  ║
+║  │  (Disk —    │      Written sequentially ✅                        ║
+║  │   flush)    │      Never modified ✅                              ║
+║  └──────┬──────┘                                                      ║
+║         │                                                             ║
+║         │ Periodically                                                ║
+║         ▼                                                             ║
+║  ┌─────────────┐                                                      ║
+║  │ Compaction  │  ◄── Merges SSTables                                ║
+║  │ (Background)│      Removes tombstones                             ║
+║  │             │      Organizes for reads                            ║
+║  └─────────────┘                                                      ║
+║                                                                       ║
+║  RELATIONAL WRITE PATH (comparison):                                  ║
+║  Random disk seek → find page → update in place → write log          ║
+║  Random I/O = 100x slower than sequential ❌                         ║
+║                                                                       ║
+║  CASSANDRA WRITE PATH:                                                ║
+║  Append to MemTable (RAM) + Append to Commit Log (sequential disk)   ║
+║  Sequential I/O = maximum disk throughput ✅                         ║
+║                                                                       ║
+╚═══════════════════════════════════════════════════════════════════════╝
+```
+---
+---
+---
+
+## Question 2 — Stepping Up
+
+**"Explain Cassandra's data model — keyspaces, tables, partition keys, clustering keys, and how they work together. Then explain tunable consistency — what it is, what the consistency levels mean, and how you would choose the right level for different Capital One use cases."**
+
