--- a/DataMajor/First_Swipe/00011.Kubernetes.md
+++ b/DataMajor/First_Swipe/00011.Kubernetes.md
@@ -113,3 +113,19 @@ Expensive overprovisioning          Efficient bin-packing
 ---
 
 
+Ready to move to the next topic?
+
+| # | Topic | Status |
+|---|---|---|
+| 1 | Scala | ✅ Done |
+| 2 | Kafka / Real-time streaming | ✅ Done |
+| 3 | NoSQL — MongoDB | ✅ Done |
+| 4 | NoSQL — Cassandra | ✅ Done |
+| 5 | Distributed Microservices | ✅ Done |
+| 6 | Kubernetes | ✅ Done |
+| 7 | EMR | ⬜ Next |
+| 8 | PySpark / Spark Refresher | ⬜ |
+| 9 | Hive / Hadoop Refresher | ⬜ |
+| 10 | Snowflake / Redshift Refresher | ⬜ |
+| 11 | Agile Refresher | ⬜ |
+| 12 | Docker Refresher | ⬜ |
